[package]
name = "program-vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
solana-sdk = "2.2.1"
litesvm = "0.6.1"
solana-keypair = "2.2.1"
solana-message = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"